--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Painel de Controle Básico do Bot</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -28,6 +29,7 @@
         <div id="statusMessage">Aguardando ação...</div>
     </div>
 
+    <script src="scripts.js"></script>
 </body>
 
 </html>
